@@ -1,3 +1,8 @@
+2007-10-08  Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* src/dvbcut.cpp:
+		Use multi-line labels.
+
 2007-10-07  Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* src/dvbcut.cpp:
